@@ -5,6 +5,13 @@ bzr-0.0.2  NOT RELEASED YET
     * Default ignore list changed to .bzr.log, *~, #*#, *.tmp, *.bak,
       *.o, *.a, *.py[oc], {arch}, CVS, .svn, _darcs.
 
+    * Patterns in .bzrignore are now added to the default ignore list,
+      rather than replacing it.
+
+  ENHANCEMENTS:
+
+    * Ignore list is memoized after first request.
+
 
 bzr-0.0.1  2005-03-26
 
